--- a/Events/Load PDF document on Created event/Pages/Index.razor
+++ b/Events/Load PDF document on Created event/Pages/Index.razor
@@ -15,7 +15,9 @@
     {
         string Link =   "http://infolab.stanford.edu/pub/papers/google.pdf";
         System.Net.WebClient webClient = new System.Net.WebClient();
+        //Returns the byte array containing the downloaded PDF file.
         byte[] byteArray = webClient.DownloadData(Link);
+        //Converting the byte array to Base64 string and sets the document path.
         DocumentPath = "data:application/pdf;base64," + Convert.ToBase64String(byteArray);
     }
   
