--- a/Printing/Print the PDFViewer inside the Dialog/Pages/Index.razor
+++ b/Printing/Print the PDFViewer inside the Dialog/Pages/Index.razor
@@ -24,19 +24,24 @@
 
     public void OnClick(MouseEventArgs args)
     {
+        //Method to show the dialog window.
         this.dialog.Show(true);
     }
 
+    //Triggers when the dialog is opened.
     public void OnClickopen(MouseEventArgs args)
     {
+        //Reads the contents of the file into a byte array, and then closes the file.
         byte[] byteArray = System.IO.File.ReadAllBytes("wwwroot/data/HTTP Succinctly.pdf");
+        //Converts the byte array in to base64 string.
         string base64String = Convert.ToBase64String(byteArray);
+        //PDF document will get loaded from the base64 string.
         viewer.Load("data:application/pdf;base64," + base64String, null);
     }
 
     private void documentLoad(LoadEventArgs args)
     {
-        //
+        //Perform print action on the PDFViewer. 
         viewer.PrintAsync();
     }
 
