Updated the password.

--- a/Password/Protect PDF document/Pages/Index.razor
+++ b/Password/Protect PDF document/Pages/Index.razor
@@ -27,7 +27,7 @@
         security.KeySize = PdfEncryptionKeySize.Key256Bit;
         security.Algorithm = PdfEncryptionAlgorithm.AES;
         //Provide owner and user password.
-        security.OwnerPassword = "password123";
+        security.OwnerPassword = "password@123";
         security.UserPassword = "password123";
         MemoryStream ms = new MemoryStream();
         //Save the document to the memory stream.
