BLAZ-25153 Review changes were addressed.

--- a/Events/Create PDF in Created Event/Pages/Index.razor
+++ b/Events/Create PDF in Created Event/Pages/Index.razor
@@ -13,6 +13,8 @@
 @code{
 
     public SfPdfViewerServer PdfViewer { get; set; }
+    
+    //Sets the PDF document path for initial loading.
     public string documentPath { get; set; }
 
     //This event triggers when the PDFViewer is created.
