--- a/Save and Load/LoadAsync/Pages/Index.razor
+++ b/Save and Load/LoadAsync/Pages/Index.razor
@@ -15,7 +15,8 @@
     public async void Load() 
     { 
         //Returns the content of the PDF document as byte array.
-        byte[] byteArray = System.IO.File.ReadAllBytes("wwwroot/Data/PDF Succinctly.pdf"); 
+        byte[] byteArray = System.IO.File.ReadAllBytes("wwwroot/Data/PDF Succinctly.pdf");
+        //Converts the byte array into base64 string. 
         string base64String = Convert.ToBase64String(byteArray);
         //Loads the PDF document from the specified base64 string.
         await Viewer.LoadAsync("data:application/pdf;base64," + base64String, null); 
