--- a/Toolbar/Open Thumbnail Programmatically/Pages/Index.razor
+++ b/Toolbar/Open Thumbnail Programmatically/Pages/Index.razor
@@ -8,5 +8,6 @@
 @code{
     public SfPdfViewerServer PDFViewer { get; set; }
 
+    //Sets the PDF document path for initial loading.
     private string DocumentPath { get; set; } = "wwwroot/data/PDF Succinctly.pdf";
 }
