--- a/Toolbar/Custom toolbar with PNG image/Pages/Index.razor
+++ b/Toolbar/Custom toolbar with PNG image/Pages/Index.razor
@@ -4,6 +4,7 @@
 @using Syncfusion.Blazor.PdfViewer;
 @using Syncfusion.Blazor.PdfViewerServer;
 
+<!--Created custom toolbar with desired set of features such as page navigations, zoom options and stamp button-->
 <SfToolbar>
     <ToolbarItems>
         <ToolbarItem PrefixIcon="e-pv-previous-page-navigation-icon" TooltipText="Previous Page" id="previousPage" Align=@Syncfusion.Blazor.Navigations.ItemAlign.Left OnClick="@previousClicked"></ToolbarItem>
@@ -15,17 +16,19 @@
     </ToolbarItems>
 </SfToolbar>
 
+<!--Rendering PDF Viewer with custom toolbar by disabling the default toolbar-->
 <SfPdfViewerServer @ref="PDFViewer" DocumentPath="@DocumentPath" EnableNavigationToolbar="false" EnableAnnotationToolbar="false" EnableToolbar="false" Height="800px" Width="100%">
     <PdfViewerCustomStampSettings CustomStamps="@pdfViewerCustomStamps">
     </PdfViewerCustomStampSettings>
 </SfPdfViewerServer>
 
-
-
-
-@code{
+@code
+{
     SfPdfViewerServer PDFViewer;
+
+    //Sets the PDF document path for initial loading.
     public string DocumentPath { get; set; } = "wwwroot/Data/PDF_Succinctly.pdf";
+    
     public List<PdfViewerCustomStamp> pdfViewerCustomStamps { get; set; }
 
     public void nextClicked(ClickEventArgs args)
