BLAZ-25153 Removed unused property.

--- a/Events/Create PDF in Created Event/Pages/Index.razor
+++ b/Events/Create PDF in Created Event/Pages/Index.razor
@@ -6,7 +6,7 @@
 @using System.IO;
 @using Syncfusion.Drawing;
 
-<SfPdfViewerServer ID="pdfviewer" @ref="@PdfViewer" DocumentPath="@documentPath">
+<SfPdfViewerServer @ref="@PdfViewer" DocumentPath="@documentPath">
     <PdfViewerEvents Created="created"></PdfViewerEvents>
 </SfPdfViewerServer>
 
