BLAZ-25168 Updated the read me content for github sample.

--- a/Annotations/Retrieve the comment status/Retrieve the comment status/Pages/_Host.cshtml
+++ b/Annotations/Retrieve the comment status/Retrieve the comment status/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace Annotationreviewstatus.Pages
+@namespace Retrievethecommentstatus.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
