--- a/Annotations/Retrieve the comment status/Retrieve the comment status/Pages/_Layout.cshtml
+++ b/Annotations/Retrieve the comment status/Retrieve the comment status/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace Annotationreviewstatus.Pages
+@namespace Retrievethecommentstatus.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -10,9 +10,9 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="Annotationreviewstatus.styles.css" rel="stylesheet" />
+    <link href="Retrievethecommentstatus.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
-    <link href="https://cdn.syncfusion.com/blazor/20.2.44/styles/bootstrap5.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/blazor/20.2.50/styles/bootstrap5.css" rel="stylesheet" />
     <script src="_content/Syncfusion.Blazor.PdfViewer/scripts/syncfusion-blazor-pdfviewer.min.js" type="text/javascript"></script>
 </head>
 <body>
