--- a/Annotations/Retrieve the comment status/Retrieve the comment status/Shared/MainLayout.razor
+++ b/Annotations/Retrieve the comment status/Retrieve the comment status/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>Annotationreviewstatus</PageTitle>
+<PageTitle>Retrievethecommentstatus</PageTitle>
 
 <div class="page">
     <div class="sidebar">
