--- a/Common/Load PDF, Excel, PPT file types/Pages/Index.razor
+++ b/Common/Load PDF, Excel, PPT file types/Pages/Index.razor
@@ -6,41 +6,125 @@
 @using Syncfusion.Pdf.Interactive;
 @using Syncfusion.Pdf.Parsing;
 @using Syncfusion.Pdf.Security;
+@using Syncfusion.Blazor.Inputs;
+@using Syncfusion.DocIO;
+@using WFormatType = Syncfusion.DocIO.FormatType;
+@using Syncfusion.Presentation;
+@using Syncfusion.PresentationRenderer;
+@using Syncfusion.XlsIO;
+@using Syncfusion.XlsIORenderer
+@using Syncfusion.DocIORenderer;
+@using System.IO;
 
-<SfButton @onclick="PdfClicked">Load PDF</SfButton>
-<SfButton @onclick="ImageClicked">Load Image</SfButton>
+<SfUploader AllowedExtensions=".doc, .docx, .rtf, .docm, .dotm, .dotx, .dot, .xls, .xlsx, .pptx, .pptm, .potx, .potm .jpeg, .png, .bmp">
+    <UploaderEvents OnUploadStart="OnSuccess"></UploaderEvents>
+    <UploaderAsyncSettings SaveUrl="https://aspnetmvc.syncfusion.com/services/api/uploadbox/Save"
+        RemoveUrl="https://aspnetmvc.syncfusion.com/services/api/uploadbox/Remove"></UploaderAsyncSettings>
+</SfUploader>
 <SfPdfViewerServer @ref="viewerInstance" Height="500px" Width="1060px"></SfPdfViewerServer>
 
 @code {
     SfPdfViewerServer viewerInstance;
 
-    public async void PdfClicked()
+
+    private void OnSuccess(UploadingEventArgs action)
     {
-        byte[] byteArray = System.IO.File.ReadAllBytes("wwwroot/Data/PDF_Succinctly.pdf");
-        string base64String = Convert.ToBase64String(byteArray);
-        viewerInstance.LoadAsync("data:application/pdf;base64," + base64String, null);
+        string base64 = action.FileData.RawFile.ToString();
+        //string fileName = args.FileData[0].Name;
+        string type = action.FileData.Type.ToLower();
+        string data = base64.Split(',')[1];
+        byte[] bytes = Convert.FromBase64String(data);
+        var outputStream = new MemoryStream();
+        Syncfusion.Pdf.PdfDocument pdfDocument = new Syncfusion.Pdf.PdfDocument();
+        using (Stream stream = new MemoryStream(bytes))
+        {
+            switch (type)
+            {
+                case "docx":
+                case "dot":
+                case "doc":
+                case "dotx":
+                case "docm":
+                case "dotm":
+                case "rtf":
+                    Syncfusion.DocIO.DLS.WordDocument doc = new Syncfusion.DocIO.DLS.WordDocument(stream, GetWFormatType(type));
+                    //Instantiation of DocIORenderer for Word to PDF conversion
+                    DocIORenderer render = new DocIORenderer();
+                    //Converts Word document into PDF document
+                    pdfDocument = render.ConvertToPDF(doc);
+                    doc.Close();
+                    break;
+                case "pptx":
+                case "pptm":
+                case "potx":
+                case "potm":
+                    //Loads or open an PowerPoint Presentation
+                    IPresentation pptxDoc = Presentation.Open(stream);
+                    pdfDocument = PresentationToPdfConverter.Convert(pptxDoc);
+                    pptxDoc.Close();
+                    break;
+                case "xlsx":
+                case "xls":
+                    ExcelEngine excelEngine = new ExcelEngine();
+                    //Loads or open an existing workbook through Open method of IWorkbooks
+                    IWorkbook workbook = excelEngine.Excel.Workbooks.Open(stream);
+                    //Initialize XlsIO renderer.
+                    XlsIORenderer renderer = new XlsIORenderer();
+                    //Convert Excel document into PDF document
+                    pdfDocument = renderer.ConvertToPDF(workbook);
+                    workbook.Close();
+                    break;
+                case "jpeg":
+                case "jpg":
+                case "png":
+                case "bmp":
+                    //Add a page to the document
+                    PdfPage page = pdfDocument.Pages.Add();
+                    //Create PDF graphics for the page
+                    PdfGraphics graphics = page.Graphics;
+                    PdfBitmap image = new PdfBitmap(stream);
+                    //Draw the image
+                    graphics.DrawImage(image, 0, 0);
+                    break;
+            }
+            pdfDocument.Save(outputStream);
+            outputStream.Position = 0;
+            loadPDFdocument(outputStream.ToArray());
+            pdfDocument.Close();
+            outputStream.Close();
+        }
     }
-    public void ImageClicked()
+
+    public void loadPDFdocument(byte[] bytes)
     {
-        //Create a new PDF document
-        PdfDocument doc = new PdfDocument();
-        //Add a page to the document
-        PdfPage page = doc.Pages.Add();
-        //Create PDF graphics for the page
-        PdfGraphics graphics = page.Graphics;
-        //Load the image from the disk
-        byte[] buff = System.IO.File.ReadAllBytes(@"wwwroot/images/image1.jpg");
-        System.IO.MemoryStream ms = new System.IO.MemoryStream(buff);
-        PdfBitmap image = new PdfBitmap(ms);
-        //Draw the image
-        graphics.DrawImage(image, 0, 0);
-        var stream = new MemoryStream();
-        doc.Save(stream);
-        byte[] bytes;
-        bytes = stream.ToArray();
+
         string base64String = Convert.ToBase64String(bytes);
-        //documentPath = "data:application/pdf;base64," + base64string;
         viewerInstance.LoadAsync("data:application/pdf;base64," + base64String, null);
-        doc.Close(true);
     }
+
+    public static WFormatType GetWFormatType(string format)
+    {
+        if (string.IsNullOrEmpty(format))
+            throw new NotSupportedException("EJ2 DocumentEditor does not support this file format.");
+        switch (format.ToLower())
+        {
+            case "dotx":
+                return WFormatType.Dotx;
+            case "docx":
+                return WFormatType.Docx;
+            case "docm":
+                return WFormatType.Docm;
+            case "dotm":
+                return WFormatType.Dotm;
+            case "dot":
+                return WFormatType.Dot;
+            case "doc":
+                return WFormatType.Doc;
+            case "rtf":
+                return WFormatType.Rtf;
+            default:
+                throw new NotSupportedException("EJ2 DocumentEditor does not support this file format.");
+        }
+    }
+
 }
