--- a/Common/Load PDF, Excel, PPT file types/Pages/_Layout.cshtml
+++ b/Common/Load PDF, Excel, PPT file types/Pages/_Layout.cshtml
@@ -12,7 +12,8 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="open_all_files.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
-   
+   <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+
     <!-- Syncfusion Blazor PDF Viewer controls theme style sheet -->
     <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
     <!-- Syncfusion Blazor PDF Viewer controls scripts -->
