--- a/Common/Load PDF, Excel, PPT file types/_Imports.razor
+++ b/Common/Load PDF, Excel, PPT file types/_Imports.razor
@@ -9,4 +9,5 @@
 @using open_all_files
 @using open_all_files.Shared
 @using Syncfusion.Blazor
+@using Syncfusion.Blazor.Inputs
 @using Syncfusion.Blazor.PdfViewerServer
