--- a/Common/Load PDF, Excel, PPT file types/Pages/Index.razor
+++ b/Common/Load PDF, Excel, PPT file types/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @using Syncfusion.Blazor.PdfViewerServer
+@using Syncfusion.Blazor.PdfViewer
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Pdf;
 @using Syncfusion.Pdf.Graphics;
@@ -21,11 +22,29 @@
     <UploaderAsyncSettings SaveUrl="https://aspnetmvc.syncfusion.com/services/api/uploadbox/Save"
         RemoveUrl="https://aspnetmvc.syncfusion.com/services/api/uploadbox/Remove"></UploaderAsyncSettings>
 </SfUploader>
-<SfPdfViewerServer @ref="viewerInstance" Height="500px" Width="1060px"></SfPdfViewerServer>
+<SfPdfViewerServer @ref="viewerInstance" Height="500px" Width="1060px" ToolbarSettings="@ToolbarSettings"></SfPdfViewerServer>
 
 @code {
     SfPdfViewerServer viewerInstance;
 
+    public PdfViewerToolbarSettings ToolbarSettings = new PdfViewerToolbarSettings()
+        {
+            ToolbarItems = new List<ToolbarItem>()
+            {
+                ToolbarItem.PageNavigationTool,
+                ToolbarItem.MagnificationTool,
+                ToolbarItem.CommentTool,
+                ToolbarItem.SelectionTool,
+                ToolbarItem.PanTool,
+                ToolbarItem.UndoRedoTool,
+                ToolbarItem.CommentTool,
+                ToolbarItem.AnnotationEditTool,
+                ToolbarItem.SearchOption,
+                ToolbarItem.PrintOption,
+                ToolbarItem.DownloadOption,
+                ToolbarItem.SubmitForm,
+            }
+        };
 
     private void OnSuccess(UploadingEventArgs action)
     {
