bug(BLAZ-29505): RTL sample with locale

--- a/RTL/RTL Sample/Pages/_Layout.cshtml
+++ b/RTL/RTL Sample/Pages/_Layout.cshtml
@@ -10,7 +10,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="RTL_Sample.styles.css" rel="stylesheet" />
+    <link href="LocalizationServer.styles.css" rel="stylesheet" />
     <link href="https://cdn.syncfusion.com/blazor/20.4.53/styles/bootstrap5.css" rel="stylesheet" />
     <script src="https://cdn.syncfusion.com/blazor/20.4.53/syncfusion-blazor-pdfviewer.min.js" type="text/javascript"></script>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
