--- a/RTL/RTL Sample/Shared/MainLayout.razor
+++ b/RTL/RTL Sample/Shared/MainLayout.razor
@@ -9,6 +9,7 @@
 
     <main>
         <div class="top-row px-4">
+            <CultureSwitcher/>
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
