--- a/RTL/RTL Sample/Pages/Index.razor
+++ b/RTL/RTL Sample/Pages/Index.razor
@@ -2,5 +2,6 @@
 <SfPdfViewerServer DocumentPath="@DocumentPath" Height="500px" Width="1060px" EnableRtl="true"></SfPdfViewerServer>
 
 @code{
-private string DocumentPath { get; set; } = "wwwroot/Data/rtl-text.pdf";
+    //Sets the PDF document path for initial loading.
+    private string DocumentPath { get; set; } = "wwwroot/Data/rtl-text.pdf";
 }
