--- a/Common/Resize the PDF Viewer to its parent element/Resize the PDF Viewer to its parent element/Pages/_Host.cshtml
+++ b/Common/Resize the PDF Viewer to its parent element/Resize the PDF Viewer to its parent element/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace Resize_PDF_Viewer_to_its_parent.Pages
+@namespace Resize_PDF.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
