--- a/Common/Resize the PDF Viewer to its parent element/Resize the PDF Viewer to its parent element/Pages/_Layout.cshtml
+++ b/Common/Resize the PDF Viewer to its parent element/Resize the PDF Viewer to its parent element/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace Resize_PDF_Viewer_to_its_parent.Pages
+@namespace Resize_PDF.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -10,7 +10,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="Resize_PDF_Viewer_to_its_parent.styles.css" rel="stylesheet" />
+    <link href="Resize_PDF.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
     <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
     <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
