--- a/Common/Resize the PDF Viewer to its parent element/Resize the PDF Viewer to its parent element/Shared/MainLayout.razor
+++ b/Common/Resize the PDF Viewer to its parent element/Resize the PDF Viewer to its parent element/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>Resize_PDF_Viewer_to_its_parent</PageTitle>
+<PageTitle>Resize_PDF</PageTitle>
 
 <div class="page">
     <div class="sidebar">
