--- a/Common/Resize the PDF Viewer to its parent element/Resize the PDF Viewer to its parent element/_Imports.razor
+++ b/Common/Resize the PDF Viewer to its parent element/Resize the PDF Viewer to its parent element/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Resize_PDF_Viewer_to_its_parent
-@using Resize_PDF_Viewer_to_its_parent.Shared
+@using Resize_PDF
+@using Resize_PDF.Shared
