UG_Documentation(ES-834513):async-await changes.

--- a/Common/Load PDF, Excel, PPT file types-SfPdfViewer/Server Side Sample/Load PDF, Excel, PPT file types/Pages/Index.razor
+++ b/Common/Load PDF, Excel, PPT file types-SfPdfViewer/Server Side Sample/Load PDF, Excel, PPT file types/Pages/Index.razor
@@ -113,11 +113,11 @@
         }
     }
 
-    public void loadPDFdocument(byte[] bytes)
+    public async void loadPDFdocument(byte[] bytes)
     {
 
         string base64String = Convert.ToBase64String(bytes);
-        viewerInstance.LoadAsync("data:application/pdf;base64," + base64String, null);
+        await viewerInstance.LoadAsync("data:application/pdf;base64," + base64String, null);
     }
 
     public static WFormatType GetWFormatType(string format)
