--- a/Load and Save/Load larger document without error-SfPdfViewer/Load larger document without error/Pages/Index.razor
+++ b/Load and Save/Load larger document without error-SfPdfViewer/Load larger document without error/Pages/Index.razor
@@ -10,14 +10,14 @@
     public SfPdfViewer2 Viewer { get; set; }
 
     //Triggers when the PDFViewer component is created. 
-    public void DocumentLoad()
+    public async void DocumentLoad()
     {
         string Url = "http://www.syncfusion.com/downloads/support/directtrac/general/pd/HTTP_Succinctly-1719682472.pdf";
         System.Net.WebClient webClient = new System.Net.WebClient();
         //Returns the byte array containing the downloaded PDF file.
         byte[] byteArray = webClient.DownloadData(Url);
         //Converting the byte array to Base64 string.
-        Viewer.LoadAsync("data:application/pdf;base64," + Convert.ToBase64String(byteArray));
+        await Viewer.LoadAsync("data:application/pdf;base64," + Convert.ToBase64String(byteArray));
     }
 
 }
