--- a/Server Deployment/Maui - SfPdfViewer/Maui Android/Pages/Index.razor
+++ b/Server Deployment/Maui - SfPdfViewer/Maui Android/Pages/Index.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
 @using System.Web;
 
-<SfPdfViewer2 @ref="viewer" DocumentPath="@DocumentPath" Height="500px" Width="1060px"></SfPdfViewer2>
+
+<SfPdfViewer2 @ref="viewer" DocumentPath="@DocumentPath" Height="100%" Width="100%"></SfPdfViewer2>
 
 @code {
     SfPdfViewer2 viewer;
