--- a/Load and Save/Load PDF file from URL-SfPdfViewer/Load PDF file from URL/Pages/Index.razor
+++ b/Load and Save/Load PDF file from URL-SfPdfViewer/Load PDF file from URL/Pages/Index.razor
@@ -9,20 +9,5 @@
 
 @code {
 
-    public string DocumentPath { get; set; }
-
-    protected override void OnInitialized()
-
-    {
-
-        string Url = "Replace your URL to retrive the PDF document";
-
-        System.Net.WebClient webClient = new System.Net.WebClient();
-
-        byte[] byteArray = webClient.DownloadData(Url);
-
-        DocumentPath = "data:application/pdf;base64," + Convert.ToBase64String(byteArray);
-
-    }
-
+    public string DocumentPath { get; set; } = "https://cdn.syncfusion.com/content/pdf/pdf-succinctly.pdf";
 }
