--- a/Load and Save/Load a PDF document using created event-SfPdfViewer/Load a PDF document using created event/Pages/Index.razor
+++ b/Load and Save/Load a PDF document using created event-SfPdfViewer/Load a PDF document using created event/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using Syncfusion.Blazor.SfPdfViewer
 
 <SfPdfViewer2 DocumentPath="@DocumentPath" Width="560" Height="315">
-    <PdfViewerEvents Created="created"></PdfViewerEvents>
+    <PdfViewerEvents Created="created" DocumentEdited="@DocumentEdited"></PdfViewerEvents>
 </SfPdfViewer2>
 
 @code 
@@ -19,5 +19,12 @@
         byte[] byteArray = webClient.DownloadData(Link);
         //Converting the byte array to Base64 string and sets the document path.
         DocumentPath = "data:application/pdf;base64," + Convert.ToBase64String(byteArray);
-    }  
+    } 
+
+    //Triggers when the document getting edited 
+    public async Task DocumentEdited(DocumentEditedEventArgs args)
+    {
+        //EditingAction provides information about the document edited
+        Console.WriteLine(args.EditingAction);
+    }
 }
