871336: Update the changes in icon style change file

--- a/Toolbar/Custom Toolbar/Primary Custom Toolbar - SfPdfViewer/Icon-Style-Change/Icon-Style-Change/Pages/Index.razor
+++ b/Toolbar/Custom Toolbar/Primary Custom Toolbar - SfPdfViewer/Icon-Style-Change/Icon-Style-Change/Pages/Index.razor
@@ -99,19 +99,19 @@
     };
 } 
 <style>
-    .e-pv-previous-page-navigation-icon::before {
+    .e-icons.e-chevron-up::before {
+        content: '\e87a';
+    }
+
+    .e-icons.e-chevron-down::before {
         content: '\e70d';
     }
 
-    .e-pv-next-page-navigation-icon::before {
-        content: '\e76a';
+    .e-icons.e-download::before {
+        content: '\e7a0';
     }
 
-    .e-pv-download-document-icon::before {
-        content: '\e75d';
-    }
-
-    .e-pv-print-document-icon::before {
-        content: '\e743';
+    .e-icons.e-save::before {
+        content: '\e7a8'
     }
 </style>
