889407: Blazor Documentation for Customize DateTimeFormat and Multiline support in Comment panel and Custom Stamp apperance features

--- a/Annotations/Comment Panel/Enable Multiline Support - SfPdfViewer/Enable_Multiline_Support/Components/App.razor
+++ b/Annotations/Comment Panel/Enable Multiline Support - SfPdfViewer/Enable_Multiline_Support/Components/App.razor
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="Enable_Multiline_Support.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="InteractiveServer" />
-    <script src="js.js"></script>
+    <!-- Syncfusion Blazor PDF Viewer (Next Gen) control's scripts -->
+    <script src="_content/Syncfusion.Blazor.SfPdfViewer/scripts/syncfusion-blazor-sfpdfviewer.min.js" type="text/javascript"></script>
     <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
 </head>
 
