897381: Updated CDN link

--- a/Load and Save/Load CustomFonts pdfium/LoadCustomFonts/LoadCustomFonts/Pages/Index.razor
+++ b/Load and Save/Load CustomFonts pdfium/LoadCustomFonts/LoadCustomFonts/Pages/Index.razor
@@ -8,6 +8,6 @@
 
 @code {
 
-    public List<string> customFonts = new List<string> { "wwwroot/SIMSUN.TTC", "wwwroot/SIMSUNB.TTF"};
+    public List<string> customFonts = new List<string> { "wwwroot/SIMSUN.TTC", "wwwroot/SIMSUNB.TTF", "https://cdn.jsdelivr.net/npm/arial-geo-bold@1.0.0/fonts/arial-geo-bold-webfont.ttf" };
 
 }
