903963: Update the version of Syncfusion packages in the pdfviewer examples

--- a/Common/PdfViewer in Popup window - SfPdfViewer/PdfViewer in Popup window/Pages/Index.razor
+++ b/Common/PdfViewer in Popup window - SfPdfViewer/PdfViewer in Popup window/Pages/Index.razor
@@ -17,7 +17,7 @@
 
     public void OnClick(MouseEventArgs args)
     {
-        this.Dialog.Show();
+        this.Dialog.ShowAsync();
     }
 
     public void OnOpen(BeforeOpenEventArgs args)
