903963: Update the version of Syncfusion packages in the pdfviewer examples

--- a/Print/PDF Viewer in a Dialog-SfPdfViewer/PDF Viewer in a Dialog/Pages/Index.razor
+++ b/Print/PDF Viewer in a Dialog-SfPdfViewer/PDF Viewer in a Dialog/Pages/Index.razor
@@ -24,7 +24,7 @@
     public void OnClick(MouseEventArgs args)
     {
         //Method to show the dialog window.
-        this.dialog.Show(true);
+        this.dialog.ShowAsync(true);
     }
 
     //Triggers when the dialog is opened.
