947270: Blazor UG Documentation Samples

--- a/Form Designer/Components/Pages/Visibility.razor
+++ b/Form Designer/Components/Pages/Visibility.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/visibility"
 
 <!-- Button group to add form fields with different visibility modes -->
 <div class="button-group">
