--- a/Form Designer/Components/Layout/NavMenu.razor
+++ b/Form Designer/Components/Layout/NavMenu.razor
@@ -139,6 +139,12 @@
                 Custom Designer Toolbar
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="events">
+                Events
+            </NavLink>
+        </div>
     </nav>
 </div>
 
