--- a/Server Deployment/WPF/WpfBlazorHybridApp/MainWindow.xaml
+++ b/Server Deployment/WPF/WpfBlazorHybridApp/MainWindow.xaml
@@ -1,16 +1,17 @@
-﻿<Window x:Class="WpfBlazorHybridApp.MainWindow"
+﻿<Window x:Class="WPFBlazorHybridApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfBlazorHybridApp"
         xmlns:blazor="clr-namespace:Microsoft.AspNetCore.Components.WebView.Wpf;assembly=Microsoft.AspNetCore.Components.WebView.Wpf"
+        xmlns:local="clr-namespace:WPFBlazorHybridApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <blazor:BlazorWebView HostPage="wwwroot\index.html" Services="{DynamicResource services}">
             <blazor:BlazorWebView.RootComponents>
                 <blazor:RootComponent Selector="#app" ComponentType="{x:Type local:PDFViewer}" />
+                <!-- Replace 'YourRazorFileName' with the actual Razor component class (e.g., Main) in your project's namespace -->
             </blazor:BlazorWebView.RootComponents>
         </blazor:BlazorWebView>
     </Grid>
