1008834: Update the shape samples

--- a/Annotations/Shapes/Remove arrow annotation heads/Remove_arrow_annotation_heads/Components/Pages/Home.razor
+++ b/Annotations/Shapes/Remove arrow annotation heads/Remove_arrow_annotation_heads/Components/Pages/Home.razor
@@ -10,7 +10,7 @@
 {
     public SfPdfViewer2 Viewer { get; set; }
 
-    private string DocumentPath { get; set; } = "wwwroot/data/PDF Succinctly.pdf";
+    private string DocumentPath { get; set; } = "https://cdn.syncfusion.com/content/pdf/pdf-succinctly.pdf";
 
     PdfViewerArrowSettings ArrowSettings = new PdfViewerArrowSettings 
     { 
