1008834: Update the Text markup annotation sample

--- a/Annotations/Text Markup/Customize highlight annotation/Customize_highlight_annotation_appearance/Components/Pages/Home.razor
+++ b/Annotations/Text Markup/Customize highlight annotation/Customize_highlight_annotation_appearance/Components/Pages/Home.razor
@@ -12,7 +12,7 @@
     SfPdfViewer2 PDFViewer;
 
     //Sets the PDF document path for initial loading.
-    private string DocumentPath { get; set; } = "Data/PDF Succinctly.pdf";
+    private string DocumentPath { get; set; } = "https://cdn.syncfusion.com/content/pdf/pdf-succinctly.pdf";
 
     //Defines the color for text markup annotations like highlight.
     private string highlightColor = "Green";
@@ -21,9 +21,3 @@
     private double opacity = 0.5;
 
 }
-
-
-
-
-
-
