--- a/Annotations/Text Markup/Customize highlight annotation/Customize_highlight_annotation_appearance/Components/_Imports.razor
+++ b/Annotations/Text Markup/Customize highlight annotation/Customize_highlight_annotation_appearance/Components/_Imports.razor
@@ -3,8 +3,10 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Customize_highlight_annotation
-@using Customize_highlight_annotation.Shared
+@using Customize_highlight_annotation_appearance
+@using Customize_highlight_annotation_appearance.Components
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.SfPdfViewer
